Fixed grid gap

--- a/modules/android/style.css
+++ b/modules/android/style.css
@@ -43,7 +43,7 @@
             display: grid;
             grid-template-columns: repeat(12, 1fr);
             grid-template-rows: repeat(4, 1fr);
-            gap: 40px;
+            gap: 10px;
             position: absolute;
             bottom: 5%;
             right: 0;
@@ -174,36 +174,14 @@
         }
 
         & .top-section .title {
-            grid-column: 3/12;
+            grid-column: 2/12;
             grid-row: 1/2;
         }
 
         
     }
 
-    @container (min-width: 700px) {
-
-
-        & .top-section hero-img {
-            background-image: url('../../assets/android-main-lady-middle.png');
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-position: center;
-            height: 100%;
-            width: 100%;
-        }
-
-        & .top-section forground-card {
-            grid-column: 3/12;
-            grid-row: 2/-1;
-
-        }
-
-        & .top-section .title {
-            grid-column: 3/11;
-            grid-row: 1/2;
-        }
-    }
+    
 
     @container (min-width: 900px) {
         & .top-section hero-img {
